# malex984Sources

./: .gdbinit  FactoredNumber.cc  FactoredNumber.h  Makefile.am  Test.txt  VanishingIdeal.cc  VanishingIdeal.h  configure.ac  extra.cc
Singular/: Doxyfile  FactoredNumber.cc  Makefile.am  Makefile.in  VanishingIdeal.cc  extra.cc  iparith.cc  iplib.cc  misc_ip.cc  mod_lib.h  pyobject.cc  singmathic.cc  table.h  tesths.cc  tok.h
Singular/LIB/: .gitattributes  schreyer.lib
Singular/dyn_modules/: Makefile.am
Singular/dyn_modules/demo/: Makefile.am  mod_main.cc  test.sh
Singular/dyn_modules/syzextra/: mod_main.cc  syzextra.cc  syzextra.h
Tst/Short/: resjung.tst
dox/: Doxyfile.html.all
dyn_modules/bigintm/: Makefile.am
dyn_modules/syzextra/: Makefile.am  mod_main.cc  syzextra.cc  syzextra.h  syzextra.tst  test.sh
gfanlib/: configure
html/: _factored_number_8cc.html  _factored_number_8h.html  _vanishing_ideal_8cc.html  _vanishing_ideal_8h.html  annotated.html  class_factored_number-members.html  class_factored_number.html  classes.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  globals_vars.html  index.html
kernel/: Makefile.am  Makefile.in  dError.cc  feResource.cc  kInline.h  kspoly.cc  kstdfac.cc  kutil.h  mod2.h  p_Procs_Generate.cc
libpolys/coeffs/: Enumerator.h  bigintmat.cc  coeffs.h  longrat.cc  numbers.cc  numstats.h
libpolys/misc/: auxiliary.h.in
libpolys/polys/: Makefile.am  PolyEnumerator.h  mod_raw.cc
libpolys/polys/ext_fields/: algext.cc  transext.cc
libpolys/polys/monomials/: p_polys.cc  p_polys.h
libpolys/polys/nc/: old.gring.cc
libpolys/polys/templates/: p_Numbers.h  p_Procs_Static.cc
m4/: ax_prefix_config_h.m4  flags.m4  gmp-check.m4  mathic-check.m4  options.m4
omalloc/: configure  configure.in
resources/: feResource.cc
standalone.test/: mk
